--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
       <div class="header_section">
          <div class="container-fluid">
             <nav class="navbar navbar-expand-lg navbar-light bg-light">
-               <a class="logo" href="#"><img src="images/logo-1.png"></a>
+               <a class="logo" href="#"><img src="logo-1.png"></a>
                <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                <span class="navbar-toggler-icon"></span>
                </button>
@@ -77,7 +77,7 @@
                            <div class="read_bt"><a href="#">Read More</a></div>
                         </div>
                         <div class="taital_right">
-                           <div class="product_img"><img src="images/front.jpg"></div>
+                           <div class="product_img"><img src="front.jpg"></div>
                         </div>
                      </div>
                   </div>
@@ -88,7 +88,7 @@
                            <div class="read_bt"><a href="#">Read More</a></div>
                         </div>
                         <div class="taital_right">
-                           <div class="product_img"><img src="images/front-1.jpg"></div>
+                           <div class="product_img"><img src="front-1.jpg"></div>
                         </div>
                      </div>
                   </div>
@@ -99,7 +99,7 @@
                            <div class="read_bt"><a href="#">Read More</a></div>
                         </div>
                         <div class="taital_right">
-                           <div class="product_img"><img src="images/front-2.jpg"></div>
+                           <div class="product_img"><img src="front-2.jpg"></div>
                         </div>
                      </div>
                   </div>
@@ -119,14 +119,14 @@
          <div class="container">
             <div class="row">
                <div class="col-md-6">
-                  <div><img src="images/programming-fees.jpg" class="programming_img"></div>
+                  <div><img src="programming-fees.jpg" class="programming_img"></div>
                </div>
                <div class="col-md-6">
                   <h3 class="about_taital">Software/programming job ready program </h3>
                   <div class="border"></div>
                   <p class="about_text">Rs.1000 per month only (free first two weeks) </p>
                   <div class="read_bt_1"><a href="#">Read More</a></div>
-                  <div class="image_1"><img src="images/programming-1.jpg"></div>
+                  <div class="image_1"><img src="programming-1.jpg"></div>
                </div>
             </div>
          </div>
@@ -162,7 +162,7 @@
             <div class="blog_section_2">
                <div class="row">
                   <div class="col-md-5">
-                     <div class="face_img"><img src="images/batch.jpg" class="face_img"></div>
+                     <div class="face_img"><img src="batch.jpg" class="face_img"></div>
                   </div>
                   <div class="col-md-7">
                      <h2 class="face_text">Land up in job by reading right content</h2>
@@ -186,7 +186,7 @@
                      5.Basis on master class feedback. you will be given next assignment.</p>
                   </div>
                   <div class="col-md-5">
-                     <div class="face_img"><img src="images/batch-2.jpg" class="face_img"></div>
+                     <div class="face_img"><img src="batch-2.jpg" class="face_img"></div>
                   </div>
                </div>
             </div>
@@ -202,7 +202,7 @@
             <div class="contact_section_2">
                <div class="row">
                   <div class="col-md-6">
-                     <div class="image_7"><img src="images/contact us.jpg"></div>
+                     <div class="image_7"><img src="contact us.jpg"></div>
                   </div>
                   <div class="col-md-6">
                      <div class="mail_section_1">
